<resources>
    <string name="app_name">CatTastk</string>
    <string name="app_title">Cat Task</string>
    <string name="letsgo">Vamos lá</string>
    <string name="tasks">Tasks</string>
    <string name="create">Criar</string>
    <string name="desc_example">Levar o Gatinho pra passear e aproveitar pra passar no mercado na volta</string>
    <string name="create_task">Criar Tarefa</string>
    <string name="lbl_title">Título</string>
    <string name="lbl_notes">Notas</string>
    <string name="lbl_date">Data</string>
    <string name="lbl_time">Horário</string>
    <string name="lbl_save_task">Salvar Tarefa</string>
    <string name="label_you_dont_have_tasks">"Opa! Parece que Hoje é dia de prequicinha, sem atividades pra hoje "</string>
    <string name="app_desc">"Aplicativo minimalista aliado da produtividade, tão simples que até seu gatinho vai se organizar e levantar da cama"</string>
    <string name="notes">Anotações</string>
    <string name="notes_editor_title">Editor de Notas</string>
    <string name="lbl_save_updates">Salvar Alterações</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_delete">Deletar</string>
</resources>
